Service tests for all cases, Controller tests and parameterized